changing for user_id to id
