# route/router.go
@@ -50,9 +50,11 @@ func (rtr *Route) RouteInit() *fiber.App {
 
 		// detail
 		// detail para pegawai
+		admin.Get("/detailUser/:id", rtr.usersService.ViewUserById)
 		admin.Get("/detail/:userID", rtr.usersService.ViewTasksByUser)
 		// detail task para pegawai, pilih id pegawai nya baru pilih id task nya
-		admin.Get("/detailTaskPegawai/:userId/:taskId", rtr.usersService.ViewTaskByUserAndTaskID)
+		admin.Get("/detailUserOrTask", rtr.usersService.ViewUserOrTaskByID)
+		// detail semua tasks
 
 		// DELETE
 		// menghapus user pegawai (task nya ikut kehapus semua yang dimiliki pegawai nya)
@@ -70,12 +72,18 @@ func (rtr *Route) RouteInit() *fiber.App {
 		user.Post("/logout", rtr.usersService.Logout)
 		// melihat profile sendiri
 		user.Get("/profile", rtr.usersService.Profile)
+		user.Get("/allTasks", rtr.usersService.ViewAllTask)
+
 		// detail
 		// melihat rincian task
 		user.Get("/detailTask/:idtask", rtr.usersService.ViewTaskByID)
 
+		user.Get("/search", rtr.usersService.Search)
+
+		// refresh token
 	}
 
+	app.Post("/refresh_Token", rtr.usersService.RefreshTokenHandler)
 	app.Post("/register", rtr.usersService.Register)
 	// di login ada ditur remember me/ refresh token
 	app.Post("/login", rtr.usersService.Login)
